# rail_semantic_grasping_pkgs

./: README.md
fetch_grasp_suggestion/: CMakeLists.txt  package.xml
fetch_grasp_suggestion/include/fetch_grasp_suggestion/: suggester.h
fetch_grasp_suggestion/src/: suggester.cpp
rail_semantic_grasping/: CMakeLists.txt  README.md
rail_semantic_grasping/include/rail_semantic_grasping/: object_semantic_segmentation.h  semantic_grasp_suggestion.h
rail_semantic_grasping/launch/: semantic_grasping.launch
rail_semantic_grasping/src/: object_semantic_segmentation.cpp  semantic_grasp_suggestion.cpp
rail_semantic_grasping/src/rail_semantic_grasping/: data_collection.py  modular_data_collection.py
rail_semantic_grasping/srv/: GetSemanticGrasps.srv  SegmentSemanticObjectsFromPointCloud.srv
